# Graphics

csci441/include/csci441/: matrix.h  vector.h
labs/: .gitignore
labs/lab0/: Vector3.cpp  Vector3.h  main.cpp
labs/lab1/: CMakeLists.txt  main.cpp
labs/lab2/: main.cpp  vert.glsl
labs/lab3/: CMakeLists.txt  frag.glsl  main.cpp  mat4.cpp  mat4.h  vec3.cpp  vec3.h  vert.glsl
labs/lab4/: CMakeLists.txt  main.cpp  mat4.cpp  mat4.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  vert.glsl
labs/lab5/: frag.glsl  main.cpp  shape.h  vert.glsl
labs/lab6/: main.cpp  objLoader.h  shape.h  shape.h___jb_old___
labs/lab8/: bitmap_image.hpp  main.cpp
labs/lab9/: main.cpp
labs/lib/csci441/include/csci441/: matrix.h  vector.h
lib/csci441/include/csci441/: vector.h
program1/: CMakeLists.txt  shape.h  vert.glsl
program2/: camera.h  main.cpp  objLoader.h  renderer.h
program3/: CMakeLists.txt  Camera.h  Color.h  Intersection.h  Light.h  Object.h  Ray.h  RayTracer.h  Sphere.h  Triangle.h  main.cpp  readme.txt
programs/program1/: README.md  README_PROGRAM1  VAO.h  frag.glsl  main.cpp  sfzg
programs/program2/: CMakeLists.txt  camera.h  main.cpp  model.h  objLoader.h  shape.h
programs/program3/: CMakeLists.txt  Camera.h  Color.h  Intersection.h  Light.h  Object.h  Ray.h  RayTracer.h  Sphere.h  Triangle.h  main.cpp  objLoader.h  vec3.h
